# enterprise-rag-copilot

Enterprise-RAG-V18/: .env.example  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
Enterprise-RAG-V18/alembic/: env.py
Enterprise-RAG-V18/alembic/versions/: 001_initial_schema.py  002_add_unique_constraint.py
Enterprise-RAG-V18/app/: admin_dashboard.py  chat_ui.py  eval_ui.py
Enterprise-RAG-V18/configs/: __init__.py  prompts.py  settings.py
Enterprise-RAG-V18/docker/: Dockerfile.api  Dockerfile.ingestion  docker-compose.local.yml
Enterprise-RAG-V18/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  networkpolicy.yaml  secret.yaml  service.yaml
Enterprise-RAG-V18/monitoring/grafana/: dashboard.json
Enterprise-RAG-V18/scripts/: generate_noise_docs.py  ingest_k8s_docs.py
Enterprise-RAG-V18/src/agents/: crag_grader.py  embed_query.py  finalize.py  graph.py  hybrid_retrieval.py  hyde.py  intent_router.py  llm_answer.py  reranker.py  rewriter.py  rrf.py  self_rag_reflect.py  spotlighting.py  sql_execute.py  (+5 more)
Enterprise-RAG-V18/terraform/: artifact_registry.tf  cloud_armor.tf  cloud_build.tf  cloud_run.tf  cloud_run_ingestion.tf  cloud_scheduler.tf  cloudsql.tf  eventarc.tf  gcs.tf  main.tf  outputs.tf  secretmanager.tf  vpc.tf
Enterprise-RAG-V18/tests/: conftest.py  golden_dataset.json  test_api.py  test_cache.py  test_ingestion.py  test_integration.py  test_pytest_comprehensive.py  test_retriever.py  test_security_pipeline.py  test_self_rag.py  test_semantic_cache.py  test_sql_pipeline.py
(+32 files in other folders)
