[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-k8s"
version = "0.1.0"
description = "Enterprise Advanced RAG for Kubernetes SRE"
authors = [
    {name = "AI Architect"}
]
dependencies = [
    "fastapi",
    "langgraph"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
